ADD Curriculum Animado

--- a/pt-br/1.ii/curriculum.html
+++ b/pt-br/1.ii/curriculum.html
@@ -14,10 +14,10 @@
         <img src = "picture/1.jpg"></br>
 
         <!-- /Redes Sociais by EG -->
-        <a href="https://www.facebook.com/eggabrielps"><img src="picture/facebook.jpg" width="50" height="50" alt=""></a>
-        <a href="https://twitter.com/EGGabrielP"><img src="picture/twitter.jpg" width="50" height="50" alt=""></a>
-        <a href="https://www.youtube.com/channel/UC7ykaaBDueSMLlJyblYoe-g"><img src="picture/youtube.jpg" width="50" height="50" alt=""></a>
-        <a href="https://www.instagram.com/eggabrielps/"><img src="picture/instagram.jpg" width="50" height="50" alt=""></a>
+        <a href="https://www.facebook.com/eggabrielps"><img src="picture/facebook.jpg" style="opacity:0.5" onmouseover="style.opacity=1" onmouseout="style.opacity=0.5" width="50" height="50" alt=""></a>
+        <a href="https://twitter.com/EGGabrielP"><img src="picture/twitter.jpg" style="opacity:0.5" onmouseover="style.opacity=1" onmouseout="style.opacity=0.5" width="50" height="50" alt=""></a>
+        <a href="https://www.youtube.com/channel/UC7ykaaBDueSMLlJyblYoe-g"><img src="picture/youtube.jpg" style="opacity:0.5" onmouseover="style.opacity=1" onmouseout="style.opacity=0.5" width="50" height="50" alt=""></a>
+        <a href="https://www.instagram.com/eggabrielps/"><img src="picture/instagram.jpg" style="opacity:0.5" onmouseover="style.opacity=1" onmouseout="style.opacity=0.5" width="50" height="50" alt=""></a>
         <!-- /Termina Redes Sociais -->  
         </center></br>
 
