ADD EGGabriel 1.iii

--- a/edson-gabriel/1.iii/livroeggabriel.html
+++ b/edson-gabriel/1.iii/livroeggabriel.html
@@ -2,9 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Percy Jackson e o Ladrão de Raios</title>
+    <title>Lorem Ipsum</title>
 </head>
 <body>
-    <h1>Percy Jackson e o Ladrão de Raios</h1>
+    <h1>Summary</h1>
+    <ul>
+        <li><a href="#autor">Sobre o Autor</a></li>
+        <li><a href="#intro">Introdução</a></li>
+        <li><a href="#capitulo-1">Chapter I - Lorem</a></li>
+        <li><a href="#capitulo-2">Chapter II - Lorem Ipsum</a></li>
+        <li><a href="#capitulo-3">Chapter III - Lorem Ipsum is</a></li>
+        <li><a href="#apendice-a">Appendix A - Lorem Ipsum is simply</a></li>
+        <li><a href="#apendice-b">Appendix B - Lorem Ipsum is simply dummy</a></li>
+        <li><a href="#apendice-c">Appendix C - Lorem Ipsum is simply dummy text</a></li>
+        <li><a href="#references">Bibliographic References</a></li>
+    </ul>
+
+    <section id="autor">
+        <h2>Autor</h2>
+        <p>Ao contrário da crença popular, o Lorem Ipsum não é simplesmente texto aleatório. Tem raízes numa peça de literatura clássica em Latim, de 45 AC, tornando-o com mais de 2000 anos. Richard McClintock, um professor de Latim no Colégio Hampden-Sydney, na Virgínia, procurou uma das palavras em Latim mais obscuras (consectetur) numa passagem Lorem Ipsum, e atravessando as cidades do mundo na literatura clássica, descobriu a sua origem.</p>
+    </section>
+
+    <section id="intro">
+        <h2>Introdução</h2>
+        <p>Não há quem goste de dor, que a procure e a queira ter, simplesmente porque é dor."</p>
+    </section>
+    
+    <section id="capitulo-1">
+        <h2>Capítulo 1</h2>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+    </section>
+
+    <section id="capitulo-2">
+        <h2>Capítulo 2</h2>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+    </section>
+
+    <section id="capitulo-3">
+        <h2>Capítulo 3</h2>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+    </section>
+
+    <section id="apendice-a">
+        <h2>Apêndice A</h2>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+    </section>
+
+    <section id="apendice-b">
+        <h2>Apêndice B</h2>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+    </section>
+
+    <section id="apendice-c">
+        <h2>Apêndice C</h2>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+    </section>
+
+    <section id="references">
+        <h2>References</h2>
+        <a title="Go to Lorem Ipsum BR site" href="http://pt.lipsum.com/">Lorem Ipsum</a>
+    </section>
+    
 </body>
 </html>
