change sentences to PT-BR

--- a/edson-gabriel/1.iii/livroeggabriel.html
+++ b/edson-gabriel/1.iii/livroeggabriel.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Lorem Ipsum</title>
 </head>
 <body>
-    <h1>Summary</h1>
+    <h1>Sumário</h1>
     <ul>
         <li><a href="#autor">Sobre o Autor</a></li>
         <li><a href="#intro">Introdução</a></li>
@@ -15,7 +15,7 @@
         <li><a href="#apendice-a">Appendix A - Lorem Ipsum is simply</a></li>
         <li><a href="#apendice-b">Appendix B - Lorem Ipsum is simply dummy</a></li>
         <li><a href="#apendice-c">Appendix C - Lorem Ipsum is simply dummy text</a></li>
-        <li><a href="#references">Bibliographic References</a></li>
+        <li><a href="#referencias">Bibliographic References</a></li>
     </ul>
 
     <section id="autor">
@@ -58,8 +58,8 @@
         <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
     </section>
 
-    <section id="references">
-        <h2>References</h2>
+    <section id="referencias">
+        <h2>referencias</h2>
         <a title="Go to Lorem Ipsum BR site" href="http://pt.lipsum.com/">Lorem Ipsum</a>
     </section>
     
