Change sentences to PT BR

--- a/edson-gabriel/1.iii/livroeggabriel.html
+++ b/edson-gabriel/1.iii/livroeggabriel.html
@@ -9,13 +9,13 @@
     <ul>
         <li><a href="#autor">Sobre o Autor</a></li>
         <li><a href="#intro">Introdução</a></li>
-        <li><a href="#capitulo-1">Chapter I - Lorem</a></li>
-        <li><a href="#capitulo-2">Chapter II - Lorem Ipsum</a></li>
-        <li><a href="#capitulo-3">Chapter III - Lorem Ipsum is</a></li>
-        <li><a href="#apendice-a">Appendix A - Lorem Ipsum is simply</a></li>
-        <li><a href="#apendice-b">Appendix B - Lorem Ipsum is simply dummy</a></li>
-        <li><a href="#apendice-c">Appendix C - Lorem Ipsum is simply dummy text</a></li>
-        <li><a href="#referencias">Bibliographic References</a></li>
+        <li><a href="#capitulo-1">Capítulo I - Lorem</a></li>
+        <li><a href="#capitulo-2">Capítulo II - Lorem Ipsum</a></li>
+        <li><a href="#capitulo-3">Capítulo III - Lorem Ipsum is</a></li>
+        <li><a href="#apendice-a">Apêndice A - Lorem Ipsum is simply</a></li>
+        <li><a href="#apendice-b">Apêndice B - Lorem Ipsum is simply dummy</a></li>
+        <li><a href="#apendice-c">Apêndice C - Lorem Ipsum is simply dummy text</a></li>
+        <li><a href="#referencias">Referencias Bibliográficas</a></li>
     </ul>
 
     <section id="autor">
