--- a/edson-gabriel/1.iii/livroeggabriel.html
+++ b/edson-gabriel/1.iii/livroeggabriel.html
@@ -30,32 +30,68 @@
     
     <section id="capitulo-1">
         <h2>Capítulo 1</h2>
-        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. 
+            O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, 
+            quando uma misturou os caracteres de um texto para criar um espécime de livro. 
+            Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, 
+            mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, 
+            que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que 
+            incluem versões do Lorem Ipsum.</p>
     </section>
 
     <section id="capitulo-2">
         <h2>Capítulo 2</h2>
-        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. 
+            O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, 
+            quando uma misturou os caracteres de um texto para criar um espécime de livro. 
+            Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, 
+            mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, 
+            que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que 
+            incluem versões do Lorem Ipsum.</p>
     </section>
 
     <section id="capitulo-3">
         <h2>Capítulo 3</h2>
-        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. 
+            O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, 
+            quando uma misturou os caracteres de um texto para criar um espécime de livro. 
+            Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, 
+            mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, 
+            que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que 
+            incluem versões do Lorem Ipsum.</p>
     </section>
 
     <section id="apendice-a">
         <h2>Apêndice A</h2>
-        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. 
+            O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, 
+            quando uma misturou os caracteres de um texto para criar um espécime de livro. 
+            Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, 
+            mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, 
+            que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que 
+            incluem versões do Lorem Ipsum.</p>
     </section>
 
     <section id="apendice-b">
         <h2>Apêndice B</h2>
-        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. 
+            O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, 
+            quando uma misturou os caracteres de um texto para criar um espécime de livro. 
+            Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, 
+            mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, 
+            que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que 
+            incluem versões do Lorem Ipsum.</p>
     </section>
 
     <section id="apendice-c">
         <h2>Apêndice C</h2>
-        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+        <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. 
+            O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, 
+            quando uma misturou os caracteres de um texto para criar um espécime de livro. 
+            Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, 
+            mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, 
+            que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que 
+            incluem versões do Lorem Ipsum.</p>
     </section>
 
     <section id="referencias">
