--- a/edson-gabriel/1.iii/livroeggabriel.html
+++ b/edson-gabriel/1.iii/livroeggabriel.html
@@ -9,12 +9,12 @@
     <ul>
         <li><a href="#autor">Sobre o Autor</a></li>
         <li><a href="#intro">Introdução</a></li>
-        <li><a href="#capitulo-1">Capítulo I - Lorem Ipsum</a></li>
-        <li><a href="#capitulo-2">Capítulo II - Lorem Ipsum</a></li>
-        <li><a href="#capitulo-3">Capítulo III - Lorem Ipsum</a></li>
-        <li><a href="#apendice-a">Apêndice A - Lorem Ipsum</a></li>
-        <li><a href="#apendice-b">Apêndice B - Lorem Ipsum</a></li>
-        <li><a href="#apendice-c">Apêndice C - Lorem Ipsum</a></li>
+        <li><a href="#capitulo-1">Capítulo I - Lorem ipsum dolor sit amet</a></li>
+        <li><a href="#capitulo-2">Capítulo II - Lorem ipsum dolor sit amet</a></li>
+        <li><a href="#capitulo-3">Capítulo III - Lorem ipsum dolor sit amet</a></li>
+        <li><a href="#apendice-a">Apêndice A - Lorem ipsum dolor sit amet</a></li>
+        <li><a href="#apendice-b">Apêndice B - Lorem ipsum dolor sit amet</a></li>
+        <li><a href="#apendice-c">Apêndice C - Lorem ipsum dolor sit amet</a></li>
         <li><a href="#referencias">Referencias Bibliográficas</a></li>
     </ul>
 
