Fix Errors Gramaticals

--- a/edson-gabriel/1.iii/livroeggabriel.html
+++ b/edson-gabriel/1.iii/livroeggabriel.html
@@ -95,7 +95,7 @@
     </section>
 
     <section id="referencias">
-        <h2>referencias</h2>
+        <h2>Referências</h2>
         <a title="Go to Lorem Ipsum BR site" href="http://pt.lipsum.com/">Lorem Ipsum</a>
     </section>
     
