--- a/edson-gabriel/1.i/edson-gabriel.html
+++ b/edson-gabriel/1.i/edson-gabriel.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sistemas de Informação</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Sistemas de Informação</h1>
